snapshots/care/data4life/hc-util-sdk-kmp/error/1.12.0-SNAPSHOT/error-1.12.0-20220503.124322-1.jar.sha1
06832cb7a263f31700e1e585d04754f71ffdd3b4